force-app/main/default/objects/Phone__c/Phone__c.object-meta.xml
<CustomObject>
    <description>This custom object represents a phone number.</description>
    <label>Phone</label>
    <nameField>
        <displayFormat>Phone-{00000}</displayFormat>
        <label>Phone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>