force-app/main/default/objects/Phone__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents the household whose phone this is.</description>
    <label>Household</label>
    <referenceTo>Household__c</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>Phones</relationshipName>
    <type>Lookup</type>
</CustomField>