force-app/main/default/objects/Phone__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the individual who's phone number this is.</description>
    <label>Individual</label>
    <referenceTo>Individual__c</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>Phones</relationshipName>
    <type>Lookup</type>
</CustomField>