force-app/main/default/objects/Phone__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field specifies the organization that this phone number belongs to.</description>
    <label>Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>Phones</relationshipName>
    <type>Lookup</type>
</CustomField>