force-app/main/default/objects/Phone__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>This field houses this phone's number.</description>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>