force-app/main/default/objects/Phone__c/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <description>This field holds the type of phone represented by this number.</description>
    <label>Phone Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phone_Types</valueSetName>
    </valueSet>
</CustomField>