force-app/main/default/objects/Phone__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if this phone is the preferred contact method.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>